Fixed z-index so that the authorship bar would not overlap rest of the pop-ups.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 #epAuthorshipToggleAuthorList {
     display: none;
     position: fixed;
-    z-index: 1000;
+    z-index: 250;
     width: 100%;
     padding: 1em 0;
 }
